/*
 * $Id: ChangeLog,v 1.3057 2004/06/10 10:36:07 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-06-11 09:44 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/gtwvt/wvtutils.c
    + HB_FUNC( WVT_MESSAGEBOX ) Altered to return the return value of MessageBox()

2004-06-10 14:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! Create TEditor as readonly to prevent displaying Insert indicator.

2004-06-09 23:39 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads.ch
    * fixed comment describing how to build/link for ADS version
      5 via  -DADS_REQUIRE_VERSION=5
  * source/rtl/profiler.prg
  * tests/testprof.prg
    * minor interface tweaks

2004-06-09 19:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed 2 GPF traps related to not excluding 1 when checking pSym->pDynSym

2004-06-09 18:40 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.c
    * some small modification in ACSC mapping

2004-06-09 17:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.h
  * xharbour/source/rtl/gtsln/gtsln.c
    ! fixed bug in color mapping
    * translate all box characters for xterm into single ones.
    * modified method of UTF-8 patched slang detection

2004-06-09 16:23 UTC-0300 Giancarlo Niccolai <antispam /at/ niccolai "dot" ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    ! When changing the fg window with ALT-TAB, the ALT status of gtxvt was
      left on. When returning to the application window, many keys were
      unuseable until the user pressed ALT.
      Fixed.

2004-06-09 16:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! Inhibit word-wrapping in debugger with the current version of TEditor by